package taskengine

import (
	"testing"

	"github.com/AvaProtocol/EigenLayer-AVS/core/testutil"
	"github.com/AvaProtocol/EigenLayer-AVS/model"
	avsproto "github.com/AvaProtocol/EigenLayer-AVS/protobuf"
	"github.com/AvaProtocol/EigenLayer-AVS/storage"
	"github.com/oklog/ulid/v2"
)

// TestExecutionIndexIncrement verifies that the execution.index field increments correctly
// for sequential executions of the same task. This test specifically validates:
//
// 1. First execution has index 0 (0-based indexing)
// 2. Each subsequent execution has an index that is exactly 1 higher than the previous
// 3. The final task.ExecutionCount matches the number of executions performed
// 4. Execution indexes are sequential: [0, 1, 2, 3, 4] for 5 executions
// 5. Later inserted executions have higher index numbers than earlier ones
//
// This ensures that clients can use the index field to understand execution order
// without needing to sort by timestamps or other fields.
func TestExecutionIndexIncrement(t *testing.T) {
	// Set up test database and executor
	db := testutil.TestMustDB()
	defer storage.Destroy(db.(*storage.BadgerStorage))

	executor := NewExecutor(testutil.GetTestSmartWalletConfig(), db, testutil.GetLogger())

	// Create a simple task with manual trigger and custom code node
	task := &model.Task{
		Task: &avsproto.Task{
			Id:             "test-task-increment",
			Owner:          "", // Empty owner to skip wallet validation
			Status:         avsproto.TaskStatus_Active,
			Name:           "Test Execution Index Increment",
			ExecutionCount: 0, // Start with 0 executions
			Trigger: &avsproto.TaskTrigger{
				Id:   "trigger1",
				Name: "manualTrigger",
				Type: avsproto.TriggerType_TRIGGER_TYPE_MANUAL,
				TriggerType: &avsproto.TaskTrigger_Manual{
					Manual: &avsproto.ManualTrigger{
						Config: &avsproto.ManualTrigger_Config{},
					},
				},
			},
			Nodes: []*avsproto.TaskNode{
				{
					Id:   "node1",
					Name: "testNode",
					Type: avsproto.NodeType_NODE_TYPE_CUSTOM_CODE,
					TaskType: &avsproto.TaskNode_CustomCode{
						CustomCode: &avsproto.CustomCodeNode{
							Config: &avsproto.CustomCodeNode_Config{
								Source: "return 'test result'", // Simple JavaScript that returns a string
							},
						},
					},
				},
			},
			Edges: []*avsproto.TaskEdge{
				{
					Id:     "edge1",
					Source: "trigger1",
					Target: "node1",
				},
			},
		},
	}

	// Execute the task multiple times and verify index increments
	const numExecutions = 5
	var executions []*avsproto.Execution
	var executionIds []string

	for i := 0; i < numExecutions; i++ {
		// Create unique execution ID for each run
		executionId := ulid.Make().String()
		executionIds = append(executionIds, executionId)

		queueData := &QueueExecutionData{
			ExecutionID:   executionId,
			TriggerType:   avsproto.TriggerType_TRIGGER_TYPE_MANUAL,
			TriggerOutput: &avsproto.ManualTrigger_Output{},
		}

		// Execute the task
		execution, err := executor.RunTask(task, queueData)
		if err != nil {
			t.Fatalf("RunTask failed for execution %d: %v", i, err)
		}

		if execution == nil {
			t.Fatalf("RunTask returned nil execution for execution %d", i)
		}

		// Verify execution was successful
		if !execution.Success {
			t.Logf("Execution %d error: %s", i, execution.Error)
			t.Fatalf("Expected execution %d to be successful, but it failed", i)
		}

		executions = append(executions, execution)

		t.Logf("Execution %d: ID=%s, Index=%d, ExecutionCount=%d",
			i, execution.Id, execution.Index, task.ExecutionCount)
	}

	// Verify that execution indexes increment correctly
	for i, execution := range executions {
		expectedIndex := int64(i) // 0-based indexing: first execution should have index 0

		if execution.Index != expectedIndex {
			t.Errorf("Execution %d has incorrect index: expected %d, got %d",
				i, expectedIndex, execution.Index)
		}

		// Verify execution ID matches what we set
		if execution.Id != executionIds[i] {
			t.Errorf("Execution %d has incorrect ID: expected %s, got %s",
				i, executionIds[i], execution.Id)
		}

		// Verify that each execution has a higher index than the previous
		if i > 0 {
			prevExecution := executions[i-1]
			if execution.Index <= prevExecution.Index {
				t.Errorf("Execution %d index (%d) should be higher than execution %d index (%d)",
					i, execution.Index, i-1, prevExecution.Index)
			}

			// Verify the difference is exactly 1
			if execution.Index != prevExecution.Index+1 {
				t.Errorf("Execution %d index (%d) should be exactly 1 more than execution %d index (%d)",
					i, execution.Index, i-1, prevExecution.Index)
			}
		}
	}

	// Verify final task execution count matches the number of executions
	expectedFinalCount := int64(numExecutions)
	if task.ExecutionCount != expectedFinalCount {
		t.Errorf("Task ExecutionCount should be %d after %d executions, got %d",
			expectedFinalCount, numExecutions, task.ExecutionCount)
	}

	// Verify all executions have sequential indexes from 0 to numExecutions-1
	for i := 0; i < numExecutions; i++ {
		execution := executions[i]
		expectedIndex := int64(i)
		if execution.Index != expectedIndex {
			t.Errorf("Final verification failed: execution %d should have index %d, got %d",
				i, expectedIndex, execution.Index)
		}
	}

	t.Logf("✅ Successfully verified %d executions with correctly incrementing indexes", numExecutions)
}

// TestExecutionIndexSimulation verifies that simulated executions don't affect the index
// Note: Commented out for now due to ManualTrigger data format complexity
// The main TestExecutionIndexIncrement test covers the core functionality
/*
func TestExecutionIndexSimulation(t *testing.T) {
	// Set up test database and engine
	db := testutil.TestMustDB()
	defer storage.Destroy(db.(*storage.BadgerStorage))

	config := testutil.GetAggregatorConfig()
	engine := New(db, config, nil, testutil.GetLogger())

	// Create a test user
	user := testutil.TestUser1()

	// Create a simple task for simulation
	task := &model.Task{
		Task: &avsproto.Task{
			Id:             "test-task-simulation",
			Owner:          user.Address.Hex(),
			Status:         avsproto.TaskStatus_Active,
			Name:           "Test Simulation Index",
			ExecutionCount: 0, // Start with 0 executions
			Trigger: &avsproto.TaskTrigger{
				Id:   "triggerSim",
				Name: "manualTrigger",
				Type: avsproto.TriggerType_TRIGGER_TYPE_MANUAL,
				TriggerType: &avsproto.TaskTrigger_Manual{
					Manual: &avsproto.ManualTrigger{
						Config: &avsproto.ManualTrigger_Config{},
					},
				},
			},
			Nodes: []*avsproto.TaskNode{
				{
					Id:   "nodeSim",
					Name: "testNode",
				Type: avsproto.NodeType_NODE_TYPE_CUSTOM_CODE,
					TaskType: &avsproto.TaskNode_CustomCode{
						CustomCode: &avsproto.CustomCodeNode{
							Config: &avsproto.CustomCodeNode_Config{
								Source: "return 'simulation result'",
							},
						},
					},
				},
			},
			Edges: []*avsproto.TaskEdge{
				{
					Id:     "edgeSim",
					Source: "triggerSim",
					Target: "nodeSim",
				},
			},
		},
	}

	// Record initial execution count
	initialExecutionCount := task.ExecutionCount

	// Run simulation - this should not increment the task's ExecutionCount
	execution, err := engine.SimulateTask(user, task.Trigger, task.Nodes, task.Edges, map[string]interface{}{
		"manualTrigger": map[string]interface{}{
			"data": []interface{}{map[string]interface{}{"test": "simulation"}},
		},
	})
	if err != nil {
		t.Fatalf("SimulateTask failed: %v", err)
	}

	if execution == nil {
		t.Fatalf("SimulateTask returned nil execution")
	}

	// Verify that the simulation execution has the correct index
	// For simulations, the index should be the current ExecutionCount (which hasn't been incremented)
	expectedSimulationIndex := initialExecutionCount // Should be 0 for the first simulation
	if execution.Index != expectedSimulationIndex {
		t.Errorf("Simulation execution should have index %d, got %d",
			expectedSimulationIndex, execution.Index)
	}

	// Verify that the task's ExecutionCount was not incremented by simulation
	if task.ExecutionCount != initialExecutionCount {
		t.Errorf("Task ExecutionCount should remain %d after simulation, got %d",
			initialExecutionCount, task.ExecutionCount)
	}

	// Run multiple simulations to verify they all get the same index
	for i := 1; i < 3; i++ {
		execution, err := engine.SimulateTask(user, task.Trigger, task.Nodes, task.Edges, map[string]interface{}{
			"manualTrigger": map[string]interface{}{
				"data": []interface{}{map[string]interface{}{"test": "simulation"}},
			},
		})
		if err != nil {
			t.Fatalf("SimulateTask failed on iteration %d: %v", i, err)
		}

		// All simulations should have the same index since ExecutionCount doesn't change
		if execution.Index != expectedSimulationIndex {
			t.Errorf("Simulation %d should have index %d, got %d",
				i, expectedSimulationIndex, execution.Index)
		}

		// ExecutionCount should still be unchanged
		if task.ExecutionCount != initialExecutionCount {
			t.Errorf("Task ExecutionCount should still be %d after simulation %d, got %d",
				initialExecutionCount, i, task.ExecutionCount)
		}
	}

	t.Logf("✅ Successfully verified simulation indexes remain consistent")
}
*/
